# sbeam

./: .gitignore  Beam_model.md  CLAUDE.md  Modal_analysis.md  README.md  Static_analysis.md  cspell.json  development_plan_bugs_todo.md  inital_project_guide.md  pyproject.toml  requirements.txt  sbeam.md  todo.md  viewer.md
docs/: Beam_model.md  Methods.ipynb  Modal_analysis.md  card_definition.md  completed_development.md  review-conm2-implementation.md  sbeam.md  viewer.md
sample/: beam_vib.bdf  beam_vib1.bdf  simple_beam.bdf  val_cantilever_modes.bdf  val_cantilever_static.bdf  val_free_free_modes.bdf  val_ss_static.bdf
sbeam/: __main__.py  gpwg.py  main.py
sbeam/assembly/: coord_transform.py  load_vector.py  mass_matrix.py  rbe3.py  stiffness.py
sbeam/model/: bulk_data.py  constraint.py  coordinate_system.py  element.py  grid.py  load.py  mass.py  material.py  property.py
sbeam/parser/: bdf_reader.py  case_control.py
sbeam/results/: f06_writer.py  results.py
sbeam/solver/: sol101.py  sol103.py
sbeam/viewer/: app.py  case_control_ui.py  geometry.py  results_view.py
tests/: test_gpwg.py
tests/assembly/: test_cbush.py  test_coord_transform.py  test_loads.py  test_mass.py  test_pin_releases.py  test_rbar.py  test_rbe2.py  test_stiffness.py
tests/integration/: test_coord_systems.py  test_verification.py
tests/model/: test_dataclasses.py
tests/parser/: test_case_control.py  test_cbush.py  test_cord2r.py  test_elements.py  test_geometry.py  test_loads.py  test_rbar.py  test_rbe2.py
tests/results/: test_f06_sol101.py  test_f06_sol103.py
(+23 files in other folders)
